<resources>
    <string name="app_name">TrainningApp</string>
    <string name="nome">Nome</string>
    <string name="idade">Idade</string>
    <string name="data_nascimento">Data de Nascimento</string>
    <string name="altura">Altura</string>
    <string name="peso">Peso</string>
    <string name="sexo">Sexo</string>
    <string name="masculino">Masculino</string>
    <string name="feminino">Feminino</string>
    <string name="tipo_fisico">Tipo Fisico</string>
    <string name="endomorfo">Endomorfo</string>
    <string name="mesomorfo">Mesomorfo</string>
    <string name="ecotomorfo">Ectomorfo</string>
    <string name="objetivos">Objetivos</string>
    <string name="saude">Saúde</string>
    <string name="perda_de_peso">Perda de peso</string>
    <string name="ganho_massa_muscular">Ganho de massa muscular</string>
    <string name="ganho_de_forca">Ganho de força</string>
    <string name="ganho_de_explosao">Ganho de Explosão</string>
    <string name="select_date">Select Date:</string>
    <string name="salvar">Salvar</string>
    <string name="limpar">Limpar</string>
    <string name="campos_cadastro_foram_limpos">Os campos foram limpos!</string>
    <string name="pelo_menos_um_objetivo_selecionado">Pelo menos um objetivo selecionado</string>
    <string name="os_campos_precisam_ser_preenchidos">\"Os seguintes campos precisam ser preenchidos: \"</string>
    <string name="cadastro_efetuado_com_sucesso">Cadastro efetuado com sucesso!</string>

    <string name="abdominal">Abdominal</string>
    <string name="agachamento_bulgaro">Agachamento Bulgaro</string>
    <string name="cadeira_extensora">Cadeira Extensora</string>
    <string name="cadeira_flexora">Cadeira Flexora</string>
    <string name="crossover">CrossOver</string>
    <string name="crucifixo_halter">Crucifixo Halter</string>
    <string name="desenvolvimento_halter">Desenvolvimento Halter</string>
    <string name="elevacao_frontal_barra">Elevação Frontal Barra</string>
    <string name="elevacao_lateral_cabo">Elevação Lateral Cabo</string>
    <string name="levantamento_terra">Levantamento Terra</string>
    <string name="panturrilha_maquina">Panturrilha Maquina</string>
    <string name="panturrilha_sentado">Panturrilha Sentado</string>
    <string name="puxada">Puxada</string>
    <string name="remada_cabo">Remada Cabo</string>
    <string name="remada_halter">Remada Halter</string>
    <string name="remada_livre">Remada Livre</string>
    <string name="rosca_concentrada">Rosca Concentrada</string>
    <string name="rosca_martelo">Rosca Martelo</string>
    <string name="rosca_scot_barra_reta">Rosca Scot Barra Reta</string>
    <string name="supino_barra">Supino Barra</string>
    <string name="triceps_corda">Triceps Corda</string>
    <string name="triceps_frances_halter">Triceps Frances Halter</string>
    <string name="triceps_maquina">Triceps Maquina</string>
    <string name="triceps_testa_halter">Triceps Testa Halter</string>
    <string name="o_exercicio">\"O exercicio \"</string>
    <string name="foi_clicado">\" foi clicado!\"</string>
    <string name="facil">Fácil</string>
    <string name="moderado">Moderado</string>
    <string name="dificil">Dificil</string>
    <string name="muito_dificil">Muito Dificil</string>
    <string name="dificuldade">Dificuldade</string>
    <string name="equipamento_utilizado">Equipamento Utilizado</string>
    <string name="nome_treino">Nome do Treino</string>
    <string name="dias_semana">Dias da Semana</string>
    <string name="segunda_feira">Segunda-Feira</string>
    <string name="terca_feira">Terça-Feira</string>
    <string name="quarta_feira">Quarta-Feira</string>
    <string name="quinta_feira">Quinta-Feira</string>
    <string name="sexta_feira">Sexta-Feira</string>
    <string name="sabado">Sábado</string>
    <string name="domingo">Domingo</string>
    <string name="exercicios">Exercicios</string>
    <string name="add">Add</string>
    <string name="repeticoes">Repetições</string>
    <string name="objetivo">Objetivo</string>
    <string name="cancelar">Cancelar</string>
    <string name="forca">Força</string>
    <string name="hipertrofia">Hipertrofia</string>
    <string name="resistencia">Resistência</string>

</resources>