<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".activities.CadastroExercicioActivity"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <android.support.constraint.ConstraintLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/nome_treino"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/editTextTreinoNome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:inputType="textPersonName"
            app:layout_constraintStart_toStartOf="@+id/textView2"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/dias_semana"
            app:layout_constraintStart_toStartOf="@+id/editTextTreinoNome"
            app:layout_constraintTop_toBottomOf="@+id/editTextTreinoNome" />

        <CheckBox
            android:id="@+id/checkBoxSegunda"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/segunda_feira"
            app:layout_constraintStart_toStartOf="@+id/textView8"
            app:layout_constraintTop_toBottomOf="@+id/textView8" />

        <CheckBox
            android:id="@+id/checkBoxTerca"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/terca_feira"
            app:layout_constraintStart_toStartOf="@+id/checkBoxSegunda"
            app:layout_constraintTop_toBottomOf="@+id/checkBoxSegunda" />

        <CheckBox
            android:id="@+id/checkBoxQuarta"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/quarta_feira"
            app:layout_constraintStart_toStartOf="@+id/checkBoxTerca"
            app:layout_constraintTop_toBottomOf="@+id/checkBoxTerca" />

        <CheckBox
            android:id="@+id/checkBoxQuinta"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/quinta_feira"
            app:layout_constraintStart_toStartOf="@+id/checkBoxQuarta"
            app:layout_constraintTop_toBottomOf="@+id/checkBoxQuarta" />

        <CheckBox
            android:id="@+id/checkBoxSexta"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sexta_feira"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/checkBoxSegunda"
            app:layout_constraintTop_toTopOf="@+id/checkBoxSegunda" />

        <CheckBox
            android:id="@+id/checkBoxSabado"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sabado"
            app:layout_constraintStart_toStartOf="@+id/checkBoxSexta"
            app:layout_constraintTop_toBottomOf="@+id/checkBoxSexta" />

        <CheckBox
            android:id="@+id/checkBoxDomingo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/domingo"
            app:layout_constraintStart_toStartOf="@+id/checkBoxSabado"
            app:layout_constraintTop_toBottomOf="@+id/checkBoxSabado" />

        <ScrollView
            android:id="@+id/scrollViewExerciciosSelecionados"
            android:layout_width="0dp"
            android:layout_height="200dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView9">

                <ListView
                    android:id="@+id/listViewExerciciosSelecionados"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    tools:listitem="@layout/adapter_exercicio_listview"/>

        </ScrollView>

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/exercicios"
            app:layout_constraintStart_toStartOf="@+id/checkBoxQuinta"
            app:layout_constraintTop_toBottomOf="@+id/checkBoxQuinta" />

        <Button
            android:id="@+id/buttonAdd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:text="@string/add"
            app:layout_constraintEnd_toEndOf="parent"
            tools:layout_editor_absoluteY="246dp" />

        <TextView
            android:id="@+id/textViewRepeticoes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/repeticoes"
            app:layout_constraintStart_toStartOf="@+id/scrollViewExerciciosSelecionados"
            app:layout_constraintTop_toBottomOf="@+id/scrollViewExerciciosSelecionados" />

        <EditText
            android:id="@+id/editTextRepeticoes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            app:layout_constraintStart_toStartOf="@+id/textViewRepeticoes"
            app:layout_constraintTop_toBottomOf="@+id/textViewRepeticoes" />

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="@+id/textView11"
            app:layout_constraintTop_toBottomOf="@+id/textView11">

            <RadioButton
                android:id="@+id/radioButtonForça"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/forca" />

            <RadioButton
                android:id="@+id/radioButton2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/hipertrofia" />

            <RadioButton
                android:id="@+id/radioButton3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/resistencia" />
        </RadioGroup>

        <TextView
            android:id="@+id/textView11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/objetivo"
            app:layout_constraintStart_toStartOf="@+id/editTextRepeticoes"
            app:layout_constraintTop_toBottomOf="@+id/editTextRepeticoes" />

        <Button
            android:id="@+id/buttonSalvarTreino"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/salvar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

        <Button
            android:id="@+id/buttonCancelarTreino"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:text="@string/cancelar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/buttonSalvarTreino" />

    </android.support.constraint.ConstraintLayout>

</ScrollView>