<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".activities.MainActivity"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <android.support.constraint.ConstraintLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/nome"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/date"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="date-month-year"
            android:textSize="24dp"
            app:layout_constraintStart_toStartOf="@+id/editTextTextPersonName"
            app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName" />

        <ImageView
            android:id="@+id/datepicker"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/calendar"
            app:layout_constraintBottom_toBottomOf="@+id/date"
            app:layout_constraintStart_toEndOf="@+id/date" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/altura"
            app:layout_constraintStart_toStartOf="@+id/date"
            app:layout_constraintTop_toBottomOf="@+id/date" />

        <EditText
            android:id="@+id/editTextNumberDecimalAltura"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="numberDecimal"
            app:layout_constraintStart_toStartOf="@+id/textView3"
            app:layout_constraintTop_toBottomOf="@+id/textView3" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/peso"
            app:layout_constraintStart_toStartOf="@+id/editTextNumberDecimalAltura"
            app:layout_constraintTop_toBottomOf="@+id/editTextNumberDecimalAltura" />

        <EditText
            android:id="@+id/editTextNumberDecimalPeso"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="numberDecimal"
            app:layout_constraintStart_toStartOf="@+id/textView4"
            app:layout_constraintTop_toBottomOf="@+id/textView4" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/sexo"
            app:layout_constraintStart_toStartOf="@+id/editTextNumberDecimalPeso"
            app:layout_constraintTop_toBottomOf="@+id/editTextNumberDecimalPeso" />

        <RadioGroup
            android:id="@+id/radioGroupSexo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="@+id/textView5"
            app:layout_constraintTop_toBottomOf="@+id/textView5">

            <RadioButton
                android:id="@+id/radioButtonMasculino"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/masculino" />

            <RadioButton
                android:id="@+id/radioButtonFeminino"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/feminino" />
        </RadioGroup>

        <Spinner
            android:id="@+id/spinnerTipoFisico"
            android:layout_width="300dp"
            android:layout_height="35dp"
            app:layout_constraintStart_toStartOf="@+id/textView6"
            app:layout_constraintTop_toBottomOf="@+id/textView6" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/tipo_fisico"
            app:layout_constraintStart_toStartOf="@+id/radioGroupSexo"
            app:layout_constraintTop_toBottomOf="@+id/radioGroupSexo" />

        <CheckBox
            android:id="@+id/checkBoxSaude"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/saude"
            app:layout_constraintStart_toStartOf="@+id/textView7"
            app:layout_constraintTop_toBottomOf="@+id/textView7" />

        <CheckBox
            android:id="@+id/checkBoxPerdaDePeso"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/perda_de_peso"
            app:layout_constraintStart_toStartOf="@+id/checkBoxSaude"
            app:layout_constraintTop_toBottomOf="@+id/checkBoxSaude" />

        <CheckBox
            android:id="@+id/checkBoxGanhoMassaMuscular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ganho_massa_muscular"
            app:layout_constraintStart_toStartOf="@+id/checkBoxPerdaDePeso"
            app:layout_constraintTop_toBottomOf="@+id/checkBoxPerdaDePeso" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/objetivos"
            app:layout_constraintStart_toStartOf="@+id/spinnerTipoFisico"
            app:layout_constraintTop_toBottomOf="@+id/spinnerTipoFisico" />

        <CheckBox
            android:id="@+id/checkBoxGanhoForca"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ganho_de_forca"
            app:layout_constraintStart_toStartOf="@+id/checkBoxGanhoMassaMuscular"
            app:layout_constraintTop_toBottomOf="@+id/checkBoxGanhoMassaMuscular" />

        <CheckBox
            android:id="@+id/checkBoxGanhoExplosao"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ganho_de_explosao"
            app:layout_constraintStart_toStartOf="@+id/checkBoxGanhoForca"
            app:layout_constraintTop_toBottomOf="@+id/checkBoxGanhoForca" />

        <EditText
            android:id="@+id/editTextTextPersonName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            app:layout_constraintStart_toStartOf="@+id/textView"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <Button
            android:id="@+id/SalvarButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="salvarCadastro"
            android:text="@string/salvar"
            app:layout_constraintStart_toStartOf="@+id/checkBoxGanhoExplosao"
            app:layout_constraintTop_toBottomOf="@+id/checkBoxGanhoExplosao" />

        <Button
            android:id="@+id/limparButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:onClick="limparCampos"
            android:text="@string/limpar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/checkBoxGanhoExplosao" />

    </android.support.constraint.ConstraintLayout>

</ScrollView>


